[package]
name = "wasm-tut"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.3"
getrandom = "0.1.14"
hyper_wasi = { version = "0.15", features = ["full"] }
tokio_wasi = { version = "1", features = [
    "rt",
    "macros",
    "net",
    "time",
    "io-util",
] }
urlencoding = "2.1.3"
